fixes #191 - downgraded patch to Java 8 compliance